<resources>
    <string name="app_name">Lung Function</string>

    <string name="lung_function_title_activity">Chức năng phổi</string>
    <string name="add_patient_title_activity">Thêm người đo</string>

    <string name="action_add">Thêm</string>
    <string name="action_select">Chọn người đo</string>

    <string name="dialog_select_patient">Chọn người đo</string>

    <string name="msg_text_request_add_patient">Vui lòng cung cấp thông tin \ntrước khi đo \n\"Chức năng phổi\"</string>

    <string name="hint_fullname">Họ và tên</string>
    <string name="hint_birthday">Ngày sinh</string>
    <string name="hint_weight">Cân nặng (kg)</string>
    <string name="hint_height">Chiều cao (cm)</string>
    <string name="hint_gender">Giới tính</string>
    <string name="hint_region">Vùng miền</string>
    <string name="hint_smoking">Tình trạng hút thuốc</string>

    <string name="hint_url">Server URL</string>
    <string name="msg_input_url">Vui lòng nhập URL</string>

    <string name="gender_male">Nam</string>
    <string name="gender_female">Nữ</string>
    <string name="region_northen">Miền Bắc</string>
    <string name="region_central">Miền Trung</string>
    <string name="region_south">Miền Nam</string>
    <string name="smoking_yes">Có hút thuốc</string>
    <string name="smoking_no">Không hút thuốc</string>

    <string name="button_lung_function">Đo chức năng phổi</string>

    <string name="msg_temp_file_null_point">Đối tượng TempFile chưa được khởi tạo</string>
    <string name="msg_file_no_found_exception">Không thể mở File</string>
    <string name="msg_file_io_exception">Có lỗi trong quá trình xử lý File</string>
    <string name="msg_no_found_lung_function_exception">Không có kết quả \"Chức năng phổi\"</string>

    <string name="text_label_flow">Flow (L/s)</string>
    <string name="text_label_volume">Volume (L)</string>

    <!-- Add Patient -->
    <string name="text_add_patient">Thêm người đo</string>
    <string name="msg_input_name">Vui lòng nhập họ và tên</string>
    <string name="msg_input_height">Vui lòng nhập chiều cao</string>
    <string name="msg_input_weight">Vui lòng nhập cân nặng</string>
    <string name="msg_input_region">Vui lòng nhập chọn khu vực</string>
    <string name="msg_input_gender">Vui lòng nhập chọn giới tính</string>
    <string name="msg_input_smoking">Vui lòng nhập lựa chọn có hút thuốc hay không</string>
</resources>
