<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.hust.soict.lung_function.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnLungFunction">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_fullname"
                    android:textColor="@color/text_content"
                    android:textColorHint="@color/text_content_hint" />
            </android.support.design.widget.TextInputLayout>

            <View style="@style/separation_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputBirthDay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edBirthDay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_birthday"
                    android:textColor="@color/text_content"
                    android:textColorHint="@color/text_content_hint" />
            </android.support.design.widget.TextInputLayout>

            <View style="@style/separation_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputGender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_gender"
                    android:textColor="@color/text_content"
                    android:textColorHint="@color/text_content_hint" />
            </android.support.design.widget.TextInputLayout>

            <View style="@style/separation_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputWeight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edWeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_weight"
                    android:textColor="@color/text_content"
                    android:textColorHint="@color/text_content_hint" />
            </android.support.design.widget.TextInputLayout>

            <View style="@style/separation_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputHeight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edHeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_height"
                    android:textColor="@color/text_content"
                    android:textColorHint="@color/text_content_hint" />
            </android.support.design.widget.TextInputLayout>

            <View style="@style/separation_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputRegion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edRegion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_region"
                    android:textColor="@color/text_content"
                    android:textColorHint="@color/text_content_hint" />
            </android.support.design.widget.TextInputLayout>

            <View style="@style/separation_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputSmoking"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edSmoking"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_smoking"
                    android:textColor="@color/text_content"
                    android:textColorHint="@color/text_content_hint" />
            </android.support.design.widget.TextInputLayout>

            <View style="@style/separation_horizontal" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnLungFunction"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:background="@color/button_lung_function_active"
        android:text="@string/button_lung_function"
        android:textAllCaps="true"
        android:textColor="@color/text_button_lung_function"
        android:textSize="@dimen/button_text_size" />
</RelativeLayout>
